# share_cycle_analysis_2021

./: README.md  pyproject.toml
notebook/: 02.status_EDA.ipynb  03.base_line.ipynb
reports/notebooks/: 01_コンペ概要・目的設定.ipynb
reports/notebooks/img/: bronze_rate
